2002-10-29  Bruno Haible  <bruno@clisp.org>

	* libstdarg.h: Treat SunPro C like ANSI C; it defines __STDC__ to 0.

2002-10-27  Bruno Haible  <bruno@clisp.org>

	* liballoca.h: Put under LGPL.
	* libstdarg.h: Likewise.

2002-10-26  Bruno Haible  <bruno@clisp.org>

	* vasprintf.c (int_vasprintf): Treat 'F' like 'f'.

2002-08-25  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MOSTLYCLEANFILES): Add stdbool.h unconditionally.

2002-08-06  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.5 released.

2002-07-25  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.4 released.

2002-07-21  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.c: Test HAVE_STDINT_H_WITH_UINTMAX instead of HAVE_STDINT_H.
	Test HAVE_INTTYPES_H_WITH_UINTMAX instead of HAVE_INTTYPES_H.

2002-07-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.3 released.

2002-07-16  Bruno Haible  <bruno@clisp.org>

	* javaexec.h (execute_java_class): Add argument exe_dir.
	* javaexec.c (execute_java_class): Add argument exe_dir. If given,
	attempt to run a native executable.
	* Makefile.am (DEFS): Define EXEEXT.
	* javacomp.sh.in: Use HAVE_GCJ_C instead of HAVE_GCJ.

2002-06-15  Bruno Haible  <bruno@clisp.org>

	* javacomp.c (compile_java_class): Ignore gcj versions that start with
	"3.0" or "3.1". (gcj 3.0.4 compiles GetURL.java to invalid bytecode,
	that crashes with an IllegalAccessError when executed by gij 3.0.4 or
	with a VerifyError when executed by Sun Java. Likewise for gcj 3.1.)

2002-05-29  Bruno Haible  <bruno@clisp.org>

	* linebreak.c (nonspacing_table_data, uc_width): Upgrade to
	Unicode 3.2.0.

2002-05-18  Bruno Haible  <bruno@clisp.org>

	* basename.h: Use __GLIBC__ >= 2, because BeOS (which defines __GLIBC__
	to -2) doesn't declare basename() properly.
	* basename.c: Likewise.

2002-05-18  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (RM): New variable.
	(install-exec-am): Depend on install-exec-clean.
	(install-exec-clean): New rule.

2002-05-09  Bruno Haible  <bruno@clisp.org>
